--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wavesurfer/react": "^1.0.7",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "crypto-hash": "^3.0.0",
     "emoji-picker-react": "^4.11.1",
     "react": "^18.3.1",
+    "react-audio-visualize": "^1.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -19,7 +21,8 @@
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "socket.io-client": "^4.7.5",
-    "sweetalert2": "^11.10.5",
+    "sweetalert2": "^11.6.13",
+    "wavesurfer.js": "^7.8.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
